# DS_final_project

./: .gitignore  README.md  architecture.md  docker-compose.yml  presentation.html
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20251203_222127_373402b7ef78_initial_schema.py  20251203_add_is_admin_to_users.py  20251208_add_bid_unique_constraint.py  20251213_add_quota_to_campaigns.py
backend/scripts/: __init__.py  reset_db.py  seed_data.py
backend/src/app/: main.py
backend/src/app/api/: deps.py
backend/src/app/api/v1/: __init__.py  auth.py  bids.py  campaigns.py  orders.py  products.py  rankings.py  ws.py
backend/src/app/core/: __init__.py  config.py  database.py  redis.py  security.py
backend/src/app/middleware/: metrics.py  rate_limit.py
backend/src/app/models/: __init__.py  base.py  bid.py  campaign.py  order.py  product.py  user.py
backend/src/app/schemas/: __init__.py  bid.py  campaign.py  order.py  product.py  ranking.py  user.py  ws.py
backend/src/app/services/: __init__.py  bid_service.py  campaign_service.py  inventory_service.py  order_service.py  product_service.py  ranking_service.py  redis_service.py  settlement_service.py  user_service.py  ws_manager.py
backend/tests/: conftest.py  test_inventory.py  test_ranking.py  test_score_calculation.py
docs/: task.md  technical_spec.md  user_requirement.md
frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
k6-tests/: README.md  baseline.js  exponential-load.js  full-demo-test.js  (+6 more)
(+33 files in other folders)
